<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.blitz.hangmanmultiplayer.PlayerDetails">

    <TextView
        android:id="@+id/first_player"
        android:layout_width="120dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="100dp"
        android:text="@string/first_pl"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/first_player_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/first_pl" />

    <EditText
        android:id="@+id/first_player_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:hint="@string/first_pl_name"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/first_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/first_player" />

    <TextView
        android:id="@+id/second_player"
        android:layout_width="120dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/second_pl"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/second_player_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_player"
        tools:text="@string/second_pl" />

    <EditText
        android:id="@+id/second_player_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:hint="@string/second_pl_name"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/second_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/second_player" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Next"
        android:onClick="onClick"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_desc" />

    <TextView
        android:id="@+id/pass_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/Pass_Phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_player" />
</android.support.constraint.ConstraintLayout>
